# convolve-rs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  LICENSE  NOTICE.md  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
benches/: convolve_bench.rs
convolve_rs/: __init__.py  __init__.pyi  _convolve_rs.pyi
convolve_rs/_convolve_rs/: __init__.pyi
docs/: algorithms.md  cli.md  conf.py  index.md  performance.md  quickstart.md
scripts/: bench_gpu_vs_cpu.py  benchmark.ipynb  compare_beamcon.sh  gpu-acceleration-decision.md  make_dummy_fits.py  make_test_cube.py  profile_cube.sh
src/: beam.rs  common_beam.rs  convolve_uv.rs  cube_io.rs  fits_io.rs  lib.rs  main.rs  python.rs  smooth.rs
tests/: cube_io_roundtrip.rs  miriad_compat.rs  test_doctests.py  test_python.py
