[package]
name = "convolve-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "convolve_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "convolvers"
path = "src/main.rs"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["python"]

[features]
python = ["dep:pyo3", "dep:numpy", "dep:pyo3-stub-gen"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
numpy = { version = "0.26", optional = true }
pyo3-stub-gen = { version = "0.22.3", optional = true }
fitsio = "0.21"
ndarray = "0.16"
rustfft = "6"
rayon = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = { version = "0.17", features = ["rayon"] }
