[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "convolve-rs"
requires-python = ">=3.9"
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "radio-beam", "astropy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["python"]
module-name = "convolve_rs._convolve_rs"
